fix: Address image thumbnail cutoff issue
Change background-size property for item-card-thumbnail
class to 'contain' to address issue of images not fitting
properly on item-cards.

Resolves: #6

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -57,7 +57,7 @@
   position: relative;
   height: 200px;
   width: 200px;
-  background-size: cover;
+  background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
   margin-top: 15px;
